tests/ui/derive/fail_asymmetric_serde_wire_names.rs
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, foundry::ApiSchema)]
#[serde(rename_all(serialize = "camelCase", deserialize = "snake_case"))]
struct AsymmetricDto {
    display_name: String,
}

fn main() {}
